--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -49,6 +49,20 @@
 .band_text_container > img {
   margin-right: 10px;
 }
-.subscription_section {
+.plans_section {
+  height: fit-content;
   margin: 10px 0px;
+  text-align: center;
+}
+.plans_section > h1 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 42px;
+  line-height: 50px;
+  margin-bottom: 20px;
+}
+.plan_cards {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
