--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -6,16 +6,19 @@
 .hero_text_container {
   width: 870px;
   height: 396px;
-  background-color: #fff9e7;
+  z-index: 2;
+  background-color: #fff9e7d0;
   font-size: min(2vw, 24px);
   border-radius: 30px;
   position: relative;
 }
 .hero_text {
-  z-index: 1;
+  z-index: 3;
   margin-top: 30px;
   margin-left: 30px;
   padding: 30px 110px;
+  color: black;
+  font-weight: 500;
 }
 .hero_image {
   z-index: 5;
@@ -25,7 +28,7 @@
   color: red;
 }
 .bg_image {
-  z-index: 0;
+  z-index: -1;
   max-width: 80%;
   max-height: 80%;
   position: absolute;
