--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,14 @@ body {
 h1 {
   font-weight: 600;
 }
-
+p {
+  font-size: 24px;
+}
+input {
+  height: 25px;
+  font-size: 20px;
+  outline: none;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
